@@ -1,5 +1,10 @@
 2009-08-27  vadim  <vadim@vk.crocodile.org>
 
+	* newFirewallDialog.cpp (newFirewallDialog::templateSelected):
+	fixed bug #2844596: "Crash during newFirewallDialog". GUI crashed
+	if user clicked "next" in the new firewall dialog to open page
+	with templates, then clicked "Back" and then "Next" again.
+
 	* ObjectManipulator.cpp (ObjectManipulator::select): fixed bug
 	#2845667 "Crash after find object". When host object was found
 	using "Find object" function while searching by ip address,
